--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html style="overflow-x: hidden;" lang="en">
 <head>
   <meta charset="utf-8">
   <title>Gents Of Lagos</title>
@@ -7,7 +7,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
+<body class="hold-transition skin-blue sidebar-mini">
   <app-root></app-root>
 </body>
+<script type="text/javascript" charset="utf8" src="assets/js/jquery.min.js"></script>
+<script type="text/javascript" charset="utf8" src="assets/js/jquery-ui.js"></script>
+<script type="text/javascript" charset="utf8" src="assets/js/bootstrap.min.js"></script>
+<script type="text/javascript" charset="utf8" src="assets/js/adminlte.min.js"></script>
+<script type="text/javascript" charset="utf8" src="assets/js/demo.js"></script>
+<script>
+  $(document).ready(function () {
+    $('.sidebar-menu').tree()
+  })
+</script>
+
 </html>
