--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,9 @@
   <title>Gents Of Lagos</title>
   <script>document.write('<base href="' + document.location + '" />');</script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="assets/css/AdminLTE.css">
 </head>
 <body class="hold-transition skin-blue sidebar-mini">
   <app-root></app-root>
